src/clippercapi/cpp/clippercapi.h

CAPI int FillRule_NonZero(void);
CAPI int FillRule_Positive(void);
CAPI int FillRule_Negative(void);
CAPI int JoinType_Square(void);
CAPI int JoinType_Bevel(void);
CAPI int JoinType_Round(void);
CAPI int JoinType_Miter(void);
CAPI int EndType_Polygon(void);
CAPI int EndType_Joined(void);