src/main/java/com/loadingbyte/cinecred/natives/clippercapi/clippercapi_h.java


    /**
     * {@snippet lang=c :
     * int FillRule_NonZero()
     * }
     */
    public static int FillRule_NonZero() {
        var mh$ = FillRule_NonZero.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("FillRule_NonZero");
            }
            return (int)mh$.invokeExact();
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class FillRule_Positive {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            clippercapi_h.C_INT    );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("FillRule_Positive");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int FillRule_Positive()
     * }
     */
    public static FunctionDescriptor FillRule_Positive$descriptor() {
        return FillRule_Positive.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int FillRule_Positive()
     * }
     */
    public static MethodHandle FillRule_Positive$handle() {
        return FillRule_Positive.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int FillRule_Positive()
     * }
     */
    public static MemorySegment FillRule_Positive$address() {
        return FillRule_Positive.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int FillRule_Positive()
     * }
     */
    public static int FillRule_Positive() {
        var mh$ = FillRule_Positive.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("FillRule_Positive");
            }
            return (int)mh$.invokeExact();
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class FillRule_Negative {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            clippercapi_h.C_INT    );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("FillRule_Negative");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int FillRule_Negative()
     * }
     */
    public static FunctionDescriptor FillRule_Negative$descriptor() {
        return FillRule_Negative.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int FillRule_Negative()
     * }
     */
    public static MethodHandle FillRule_Negative$handle() {
        return FillRule_Negative.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int FillRule_Negative()
     * }
     */
    public static MemorySegment FillRule_Negative$address() {
        return FillRule_Negative.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int FillRule_Negative()
     * }
     */
    public static int FillRule_Negative() {
        var mh$ = FillRule_Negative.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("FillRule_Negative");
            }
            return (int)mh$.invokeExact();
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class JoinType_Square {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            clippercapi_h.C_INT    );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("JoinType_Square");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int JoinType_Square()
     * }
     */
    public static FunctionDescriptor JoinType_Square$descriptor() {
        return JoinType_Square.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int JoinType_Square()
     * }
     */
    public static MethodHandle JoinType_Square$handle() {
        return JoinType_Square.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int JoinType_Square()
     * }
     */
    public static MemorySegment JoinType_Square$address() {
        return JoinType_Square.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int JoinType_Square()
     * }
     */
    public static int JoinType_Square() {
        var mh$ = JoinType_Square.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("JoinType_Square");
            }
            return (int)mh$.invokeExact();
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class JoinType_Bevel {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            clippercapi_h.C_INT    );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("JoinType_Bevel");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int JoinType_Bevel()
     * }
     */
    public static FunctionDescriptor JoinType_Bevel$descriptor() {
        return JoinType_Bevel.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int JoinType_Bevel()
     * }
     */
    public static MethodHandle JoinType_Bevel$handle() {
        return JoinType_Bevel.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int JoinType_Bevel()
     * }
     */
    public static MemorySegment JoinType_Bevel$address() {
        return JoinType_Bevel.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int JoinType_Bevel()
     * }
     */
    public static int JoinType_Bevel() {
        var mh$ = JoinType_Bevel.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("JoinType_Bevel");
            }
            return (int)mh$.invokeExact();
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class JoinType_Round {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            clippercapi_h.C_INT    );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("JoinType_Round");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int JoinType_Round()
     * }
     */
    public static FunctionDescriptor JoinType_Round$descriptor() {
        return JoinType_Round.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int JoinType_Round()
     * }
     */
    public static MethodHandle JoinType_Round$handle() {
        return JoinType_Round.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int JoinType_Round()
     * }
     */
    public static MemorySegment JoinType_Round$address() {
        return JoinType_Round.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int JoinType_Round()
     * }
     */
    public static int JoinType_Round() {
        var mh$ = JoinType_Round.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("JoinType_Round");
            }
            return (int)mh$.invokeExact();
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class JoinType_Miter {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            clippercapi_h.C_INT    );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("JoinType_Miter");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int JoinType_Miter()
     * }
     */
    public static FunctionDescriptor JoinType_Miter$descriptor() {
        return JoinType_Miter.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int JoinType_Miter()
     * }
     */
    public static MethodHandle JoinType_Miter$handle() {
        return JoinType_Miter.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int JoinType_Miter()
     * }
     */
    public static MemorySegment JoinType_Miter$address() {
        return JoinType_Miter.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int JoinType_Miter()
     * }
     */
    public static int JoinType_Miter() {
        var mh$ = JoinType_Miter.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("JoinType_Miter");
            }
            return (int)mh$.invokeExact();
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class EndType_Polygon {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            clippercapi_h.C_INT    );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("EndType_Polygon");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int EndType_Polygon()
     * }
     */
    public static FunctionDescriptor EndType_Polygon$descriptor() {
        return EndType_Polygon.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int EndType_Polygon()
     * }
     */
    public static MethodHandle EndType_Polygon$handle() {
        return EndType_Polygon.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int EndType_Polygon()
     * }
     */
    public static MemorySegment EndType_Polygon$address() {
        return EndType_Polygon.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int EndType_Polygon()
     * }
     */
    public static int EndType_Polygon() {
        var mh$ = EndType_Polygon.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("EndType_Polygon");
            }
            return (int)mh$.invokeExact();
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class EndType_Joined {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            clippercapi_h.C_INT    );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("EndType_Joined");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int EndType_Joined()
     * }
     */
    public static FunctionDescriptor EndType_Joined$descriptor() {
        return EndType_Joined.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int EndType_Joined()
     * }
     */
    public static MethodHandle EndType_Joined$handle() {
        return EndType_Joined.HANDLE;
    }
